Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32174

"Run CMake with configuration changes"-dialog is shown partly out of screen bounds

    XMLWordPrintable

Details

    • f790c7302 (master)

    Description

      Steps to reproduce:

      • Install Boot to Qt toolchain (6.9.0 snapshot used) and Qt C 15.0.0 on macOS
      • do the usual device setup stuff and enable debugging/profiling from QtC Projects -> Build Settings
      • open a QML application and set a  QML breakpoint
      • start debugging

      Expected result:

      "Run CMake with configuration changes"-dialog fits the screen

      Actual result:

      "Run CMake with configuration changes"-dialog is shown partly out of bounds of the screen.

      See the screenshot attached.

      Attachments

        1. Screenshot 2024-12-13 at 15.42.40.png
          1.19 MB
          Milla Pohjanheimo
        2. qtcreator16-cmake-chages.png
          645 kB
          Cristian Adam
        3. qtcreator-cmake-changes-code.png
          773 kB
          Cristian Adam
        4. qtcreator-cmake-changes-details.png
          724 kB
          Cristian Adam
        5. qtcreator-cmake-changes-details-expanded.png
          693 kB
          Cristian Adam
        For Gerrit Dashboard: QTCREATORBUG-32174
        # Subject Branch Project Status CR V

        Activity

          People

            cadam Cristian Adam
            mipohjan Milla Pohjanheimo
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes