CMakePM: Refactor Aply CMake changes message box

By using a custom QDialog.

Fixes: QTCREATORBUG-32174
Change-Id: Ifeb032406e3aa483c5d039f652dd0e06d87dd2b4
Reviewed-by: Eike Ziller <eike.ziller@qt.io>